[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Themes/Retro/theme.tres" type="Theme" id=1]
[ext_resource path="res://Source/StartMenu/StartMenu.gd" type="Script" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -206.0
margin_right = 90.0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 180.0
margin_bottom = 85.0
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 1 )
toggle_mode = true
text = "Start"
flat = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 180.0
margin_bottom = 116.0
theme = ExtResource( 1 )
text = "Options"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 180.0
margin_bottom = 147.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = ExtResource( 1 )
text = "Quit"
flat = true
